# meta_2026  versão do sst 4.4.36v controle de CDG 32.16V    versão em testes
# meta_2026

versão do sst 4.4.36v
controle de CDG 32.16V

 versão em testes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- ===================== FAVICONS ===================== -->
     <link
       rel="shortcut icon"
-      href="imgs/sem_fundo_mt_natal/favicon.ico"
+      href="imgs/img_logo_sem__fundo_favicon/favicon.ico"
       type="image/x-icon"
     />
     <link id="dynamic-favicon" rel="icon" href="/icon-v2.png" />
@@ -41,7 +41,7 @@
         <div class="sidebar-overlay" onclick="toggleSidebar()"></div>
 
         <!-- TÍTULO -->
-        <h1 class="titulo-metatup">Meta<span>_up</span></h1>
+        <h1 class="titulo-metatup">Meta<span>_up</span> 2026</h1>
 
         <!-- SUBTÍTULO -->
         <p class="subtitulo">
@@ -460,7 +460,7 @@
         Estamos em fase de desenvolvimento e pedimos a compreensão de todos.”
       </p>
       <div class="versao-box">
-        <span id="app-version">v 4.4.35</span>
+        <span id="app-version">v 4.4.36</span>
         </ul>
       </div>
     </div>
