# meta_2026  versão do sst 4.5.37v controle de CDG 32.16V    versão em testes
# meta_2026

versão do sst 4.5.37v
controle de CDG 32.16V

 versão em testes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="sidebar-overlay" onclick="toggleSidebar()"></div>
 
         <!-- TÍTULO -->
-        <h1 class="titulo-metatup">Meta<span>_up</span></h1>
+        <h1 class="titulo-metatup">Meta<span>_up</span> 2026</h1>
 
         <!-- SUBTÍTULO -->
         <p class="subtitulo">
