# meta_2026  versão do sst 4.6.39v controle de CDG 32.16V    versão em testes
# meta_2026

versão do sst 4.6.39v
controle de CDG 32.16V

 versão em testes

--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
 
         <!-- SUBTÍTULO -->
         <p class="subtitulo">
-          Acompanhe seu progresso e suas metas financeiras
-        </p>
+  <span class="destaque-verde">Acompanhe</span>
+  seu progresso e suas
+  <span class="destaque-branco">metas financeiras</span>
+</p>
+
       </header>
 
       <!-- ===================== BARRA DE ABAS ===================== -->
@@ -533,7 +536,7 @@
 </ul>
 
   <div class="versao-box">
-    <span id="app-version">v 4.6.38</span>
+    <span id="app-version">v 4.6.39</span>
   </div>
 </div>
 
