# meta_2026  versão do sst v 4.6.40v controle de CDG 32.16V    versão em testes
# meta_2026

versão do sst v 4.6.40v
controle de CDG 32.16V

 versão em testes

--- a/index.html
+++ b/index.html
@@ -246,7 +246,11 @@
 
         <!-- SEPARADOR -->
         <hr class="border-[var(--border-color)] my-8" />
-
+<h4 class="meta-title">
+  <ion-icon name="trophy-outline"></ion-icon>
+  Detalhes da meta
+</h4>
+<br>
         <!-- ===================== SEÇÃO: CARDS RESUMO ===================== -->
      <section class="grid grid-cols-2 gap-4 mb-8">
 
@@ -494,6 +498,7 @@
  <!-- MODAL: INFORMAÇÕES BETA -->
 <div id="overlay" class="overlay"></div>
 
+
 <div id="card" class="modal-card">
   <button id="closeCard" class="close-btn">✕</button>
 
@@ -537,7 +542,7 @@
 </ul>
 
   <div class="versao-box">
-    <span id="app-version">v 4.6.39</span>
+    <span id="app-version">v 4.6.40</span>
   </div>
 </div>
 
