# meta_2026  versão do sst v 4.6.40v controle de CDG 32.16V    versão em testes
# meta_2026

versão do sst v 4.6.40v
controle de CDG 32.16V

 versão em testes

--- a/index.html
+++ b/index.html
@@ -657,6 +657,17 @@
       </div>
     </div>
     <!--sisteam nova-->
+<!-- CARD DE ATUALIZAÇÃO -->
+<div id="update-overlay" class="update-overlay">
+  <div class="update-card">
+    <h2>🚀 Atualização em breve</h2>
+    <p>
+      Estamos preparando novidades e melhorias para você.
+      <strong>Fique atento</strong>, em breve teremos uma nova versão disponível!
+    </p>
+    <button onclick="closeUpdateCard()">Entendi</button>
+  </div>
+</div>
 
   </body>
 </html>
