# meta_2026  versão do sst v 5.7.41v controle de CDG 32.16V    versão em testes
# meta_2026

versão do sst v 5.7.41v
controle de CDG 32.16V

 versão em testes

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
   <head>
     <!-- ===================== METADADOS ===================== -->
@@ -496,11 +496,10 @@
       <abbr title="ver mais">
         <h6 class="beta-text" id="openCard">Beta</h6>
       </abbr>
-     <div id="abbr-block-toast">
-  <span class="icon">⚠️</span>
-  <span class="mensagem">Este recurso foi desativado.&#x1F622;</span>
-</div>
-
+      <div id="abbr-block-toast">
+        <span class="icon">⚠️</span>
+        <span class="mensagem">Este recurso foi desativado.&#x1F622;</span>
+      </div>
     </div>
 
     <!-- MODAL: INFORMAÇÕES BETA -->
@@ -727,13 +726,14 @@
             Ao continuar, você confirma que está ciente de que este sistema
             permanecerá operacional, porém sem novas atualizações ou melhorias.
           </p>
- <p id="avissso">
-  Alguns recursos foram desativados.
-  <span class="desculpas">
-    Pedimos desculpas pelo ocorrido. Estamos fazendo o máximo para trazer o novo Web App o mais rápido possível, com performance otimizada e novos recursos. Agradecemos a sua compreensão.
-  </span>
-</p>
-
+          <p id="avissso">
+            Alguns recursos foram desativados.
+            <span class="desculpas">
+              Pedimos desculpas pelo ocorrido. Estamos fazendo o máximo para
+              trazer o novo Web App o mais rápido possível, com performance
+              otimizada e novos recursos. Agradecemos a sua compreensão.
+            </span>
+          </p>
         </section>
 
         <button id="metaup-freeze-accept" class="metaup-freeze-btn">
